feat: add lottery layouts for Thai and Vietnamese lotteries, implement home and live pages, and set up Pinia store for lottery results

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,3 +1,17 @@
 {
-  "extends": "./.quasar/tsconfig.json"
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "src/*": ["src/*"],
+      "app/*": ["src/app/*"],
+      "components/*": ["src/components/*"],
+      "layouts/*": ["src/layouts/*"],
+      "pages/*": ["src/pages/*"],
+      "boot/*": ["src/boot/*"],
+      "stores/*": ["src/stores/*"],
+      "vue$": ["node_modules/vue/dist/vue.runtime.esm-bundler.js"]
+    }
+  },
+  "exclude": ["dist", ".quasar", "node_modules"]
+  // "extends": "./.quasar/tsconfig.json"
 }
